# sabiwm

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
implementors/sabiwm/backend/: trait.Backend.js
sabiwm/: fn.initialize_logger.html  fn.run.html  index.html  sidebar-items.js
sabiwm/backend/: Xcb.t.html  enum.Event.html  index.html  sidebar-items.js  struct.Xcb.html  trait.Backend.html
sabiwm/backend/event/: enum.Event.html
sabiwm/backend/xcb/: struct.Xcb.html
sabiwm/core/: index.html  sidebar-items.js  struct.Rectangle.html  struct.Stack.html  struct.Workspace.html
sabiwm/core/rectangle/: struct.Rectangle.html
sabiwm/core/stack/: struct.Stack.html
sabiwm/core/workspace/: struct.Workspace.html
src/: lib.rs  macros.rs
src/backend/: backend.rs  event.rs  mod.rs
src/backend/xcb/: mod.rs
src/core/: mod.rs  rectangle.rs  screen.rs  stack.rs  workspace.rs
src/sabiwm/src/: lib.rs.html
src/sabiwm/src/backend/: event.rs.html  mod.rs.html
src/sabiwm/src/backend/xcb/: mod.rs.html
src/sabiwm/src/core/: mod.rs.html  rectangle.rs.html  stack.rs.html  workspace.rs.html
