[package]
name = "sabiwm"
version = "0.0.1"
authors = ["Simon Wollwage <mail.wollwage@gmail.com>"]

[dependencies]
error-chain ="0.7"
slog = { version = "1.3", features = ["max_level_trace", "release_max_level_info"] }
slog-json = "1.2"
slog-scope = "0.2"
slog-stream = "1.2"
xcb = "0.7"
xdg = "2.0.0"

[lib]
doc = true
doctest = true

[[bin]]
name = "sabiwm"
path = "src/bin/sabiwm.rs"
doc = false
